# Mirage

./: LICENSE  README.md
Model/: action-recognition_FP16-INT8.xml
env_config/: AMX-test
mirage/: README.md  openvino_cpu_test.py
mirage/amx_sample/: CMakeLists.txt  img_op.cpp
mirage/rec_mem/: contain_frames.cpp  main.cpp
mirage/recyclic_memory_provisioning/: main.cpp  main2.cc  video_analytics.cpp  video_analytics2.cpp
mirage/script/: build_samples.sh
mirage/src/: CMakeLists-bak  CMakeLists.txt  args_helper.cpp  args_helper.hpp  classification_results.h  classification_sample_async.h  common.hpp  main.cpp
